fix layout issue

--- a/app/assets/stylesheets/components/_offer_card.scss
+++ b/app/assets/stylesheets/components/_offer_card.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: stretch;
   width: 350px;
+  height: 300px;
   background-color: white;
 }
 
